--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,16 +1,23 @@
 ---
 
 ## By default will use master
-samson_version     : "master" 
+samson_version              : "master" 
 
-samson_user         : "samson"
-samson_group        : "samson"
+samson_user                 : "samson"
+samson_group                : "samson"
 
-samson_home_dir     : "/opt/samson"
-samson_deploy_dir   : "{{ samson_home_dir }}/{{ samson_version }}"
-samson_log_dir      : "/var/log/samson"
+samson_apt_dependecies      :
+                                - git
+                                - libgmp3-dev
+                                - libmysqlclient-dev
+                                - libpq-dev
 
-samson_git_url      : "https://github.com/zendesk/samson.git"
+#samson_database             : ""
+samson_exclude_groups       : 
+                                - "development"
 
+samson_home_dir             : "/opt/samson"
+samson_deploy_dir           : "{{ samson_home_dir }}/{{ samson_version }}"
+samson_log_dir              : "/var/log/samson"
 
-#
+samson_git_url              : "https://github.com/zendesk/samson.git"
