--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,7 @@
 
 ## By default will use master but its a good idea to pin a version
 samson_version              : "master" 
-## Database configuration
+## Database configuration (default will use sqlite you can configure also use mysql or postgresql)
 samson_database             :
                                 development :
                                   adapter   : sqlite3
