--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 
-## By default will use master but its a good idea to pin a version
+## By default will use master, but its a good idea to pin a version
 samson_version              : "master" 
-## Database configuration (default will use sqlite you can configure also use mysql or postgresql)
+## Database configuration (default will use sqlite you can configure mysql or postgresql)
 samson_database             :
                                 development :
                                   adapter   : sqlite3
@@ -30,7 +30,7 @@ samson_url                  : "http://localhost:{{ samson_puma_port }}"
 samson_puma_bind            : "0.0.0.0"
 samson_puma_port            : 3000
 
-## dependecies to install git and mysql and postgres stuff 
+## dependecies to install git, mysql and postgres stuff 
 samson_apt_dependecies      :
                                 - git
                                 - libgmp3-dev
