--- a/test/default/default.yml
+++ b/test/default/default.yml
@@ -5,6 +5,7 @@
   become: True
   vars:
     nodejs_version: "4.3*"
+    samson_manage_project: true
   roles :
     - ansible-rvm
     - Stouts.nodejs
